--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,151 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#ffffff">
     <title>Brooklyn Outdoor Film Festival</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div>
-      <p>Brooklyn Outdoor Film Festival</p>
+
+    <div class="site-container">
+      <div id="sidebar" class="sticky-top shadow-sm mb-5 bg-white rounded">
+        <div class="sidebar-header border-bottom w-100 mw-100">
+          <a href="#" class="mw-100">
+            <img src="images/logo.png" alt="" class="mw-100">
+          </a>
+          <button class="sidebar-toggler border-0 bg-white float-right mw-100">
+            <a href="#"><span class="material-icons text-secondary mw-100">keyboard_arrow_left</span>
+          </button>
+        </div>
+        <div class="sidebar-navitems w-100 mw-100">
+          <ul class="mw-100">
+            <li class="mw-100 active">
+              <a class="nav-link mw-100" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="mw-100">
+              <a class="nav-link mw-100" href="#">Artists</a>
+            </li>
+            <li class="mw-100">
+              <a class="nav-link mw-100" href="#">Movies</a>
+            </li>
+            <li class="mw-100">
+              <a class="nav-link mw-100" href="#">Schedule</a>
+            </li>
+            <li class="mw-100">
+              <a class="nav-link mw-100" href="#">About</a>
+            </li>
+          </ul>
+          <button class="btn btn-outline-success my-2 my-sm-0 w-100 mw-100">Register</button>
+        </div>
+      </div><!-- /sidebar -->
+
+      <div class="main-content">
+        <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow p-3 mb-5 bg-white">
+          <div>
+            <button class="navbar-toggler sidebar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="material-icons text-secondary">menu</span>
+            </button>
+            <a class="navbar-brand collapse navbar-collapse" href="#">
+              <img src="images/logo.png" alt="">
+            </a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Artists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Movies</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Schedule</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Register</button>
+          </div>
+        </nav>
+
+        <main role="main">
+
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="carounsal">
+                  <div class="container">
+                    <h1 class="display-3">Hello, world!</h1>
+                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+            </div>
+
+            <hr>
+
+          </div> <!-- /container -->
+
+        </main><!-- /main -->
+
+        <footer class="container">
+          <p>&copy; Company 2017-2018</p>
+        </footer>
+      </div><!-- /site-container -->
     </div>
+
   </body>
 </html>
