--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           </button>
         </div>
         <div class="sidebar-navitems w-100 mw-100">
-          <ul class="mw-100">
+          <ul class="mw-100 m-0 p-0 ">
             <li class="mw-100 active">
               <a class="nav-link mw-100" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -76,19 +76,44 @@
         </nav>
 
         <main role="main">
-
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <div class="carounsal">
-                  <div class="container">
-                    <h1 class="display-3">Hello, world!</h1>
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+          <div id="main-carousel" class="carousel slide bg-dark" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#main-carousel" data-slide-to="1"></li>
+              <li data-target="#main-carousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/car-0.jpg" alt="..." class="carousel-img">
+                <div class="carousel-caption-container transluscent-33">
+                  <div class="carousel-caption center">
+                    <span class="display-3"><strong>Brooklyn Outdoor Film Festival</strong></span>
+                    <p class="d-none d-md-block">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</p>
                   </div>
                 </div>
               </div>
+              <div class="carousel-item">
+                <img src="images/car-1.png" alt="..." class="carousel-img">
+                <div class="carousel-caption-container">
+                  <div class="carousel-caption text-left w-50 caption-limited">
+                    <span class="display-3 transluscent-66 caption-limited"><strong>Donec sed odio dui. Cras justo odio</strong></span>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/car-2.jpg" alt="..." class="carousel-img">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#main-carousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#main-carousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="container">
             <div class="row">
               <div class="col-md-4">
                 <h2>Heading</h2>
@@ -144,7 +169,7 @@
         </main><!-- /main -->
 
         <footer class="container">
-          <p>&copy; Company 2017-2018</p>
+          <p>&copy; Brooklyn Vibes Events Co. 2017-2018</p>
         </footer>
       </div><!-- /site-container -->
     </div>
