sidebar close fix

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <img src="images/logo.png" alt="" class="mw-100">
           </a>
           <button class="sidebar-toggler border-0 bg-white float-right mw-100">
-            <a href="#"><span class="material-icons text-secondary mw-100">keyboard_arrow_left</span>
+            <a href="#"><span class="material-icons text-secondary mw-100">keyboard_arrow_left</span></a>
           </button>
         </div>
         <div class="sidebar-navitems w-100 mw-100">
