--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,10 @@
               <a class="nav-link mw-100" href="#movies">Movies</a>
             </li>
             <li class="mw-100">
-              <a class="nav-link mw-100" href="#Schedule">Schedule</a>
+              <a class="nav-link mw-100" href="#schedule">Schedule</a>
+            </li>
+            <li class="mw-100">
+              <a class="nav-link mw-100" href="#news">News</a>
             </li>
             <li class="mw-100">
               <a class="nav-link mw-100" href="#about">About</a>
@@ -69,6 +72,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#schedule">Schedule</a>
+              </li>
+              <li class="mw-100">
+                <a class="nav-link mw-100" href="#news">News</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
@@ -175,18 +181,16 @@
             </div>
             <div class="row section-body">
               <div class="col infinite-scroller-container bg-dark">
-                <div class="infinite-scroller infinite-scroller-content">
-                  <!-- <div class="infinite-scroller-content"></div> -->
+                <div class="infinite-scroller-content">
                 </div>
-                <div class="infinite-scroller infinite-scroller-content">
-                  <!-- <div class="infinite-scroller-content"></div> -->
+                <div class="infinite-scroller-content">
                 </div>
               </div>
             </div>
             <a name="movies" type="hidden" class="section-anchor d-block mb-5"></a>
             <div class="row section-header section-header-right section-movies">
               <div class="col col-md-10 shadow-lg">
-                <p class="text-white">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p class="text-white">Movies</p>
               </div>
             </div>
             <div class="row section-body">
@@ -289,10 +293,63 @@
                 <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
               </div>
             </div>
-            <a name="about" type="hidden" class="section-anchor d-block mb-5"></a>
-            <div class="row section-header section-header-right section-about">
+            <a name="news" type="hidden" class="section-anchor d-block mb-5"></a>
+            <div class="row section-header section-header-right section-news">
               <div class="col col-md-10 shadow-lg">
-                <p class="text-white">Brooklyn Outdoor Film Festival</p>
+                <p class="text-white">News</p>
+              </div>
+            </div>
+            <div class="row section-body">
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                <h2>Section News</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+              </div>
+            </div>
+            <a name="about" type="hidden" class="section-anchor d-block mb-5"></a>
+            <div class="row section-header section-header-left section-about">
+              <div class="col col-md-10 shadow-lg">
+                <p class="text-white">About Us</p>
               </div>
             </div>
             <div class="row section-body">
