--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
             </a>
           </div>
           <div class="container m-0 mw-100">
-            <div class="row section-body">
+            <div class="row section-body p-2">
               <div class="col-md-4">
                 <h2>Home Section</h2>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -193,7 +193,7 @@
                 <p class="text-white">Movies</p>
               </div>
             </div>
-            <div class="row section-body">
+            <div class="row section-body p-2">
               <div class="col-md-4">
                 <h2>Section Movies</h2>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -246,51 +246,163 @@
                 <p class="text-white">Schedule</p>
               </div>
             </div>
-            <div class="row section-body">
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div>
-              <div class="col-md-4">
-                <h2>Section Schedule</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <div class="row section-body p-2">
+              <div class="col">
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs flex-nowrap" id="schedule-tabs" role="tablist">
+                  <li class="nav-item">
+                    <a class="nav-link schedule-tab-link active" id="aug5-tab" data-toggle="tab" href="#aug5" role="tab" aria-controls="aug5" aria-selected="true">August 5</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link schedule-tab-link"  id="aug6-tab" data-toggle="tab" href="#aug6" role="tab" aria-controls="aug6" aria-selected="false">August 6</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link schedule-tab-link"  id="aug7-tab" data-toggle="tab" href="#aug7" role="tab" aria-controls="aug7" aria-selected="false">August 7</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link schedule-tab-link"  id="aug8-tab" data-toggle="tab" href="#aug8" role="tab" aria-controls="aug8" aria-selected="false">August 8</a>
+                  </li>
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content pt-2">
+                  <div class="tab-pane active" id="aug5" role="tabpanel" aria-labelledby="aug5-tab">
+                    <p class="schedule-date-detail">Monday, August 5</p>
+                    <table class="table table-bordered table-hover align-middle">
+                      <tbody>
+                        <tr>
+                          <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Feast With King Midas</p>
+                            <p>By Timo Wright</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">Ja Passou</p>
+                            <p>By Sebastião Salgado, Pedro Patrocínio</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">Break</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">No Necesito</p>
+                            <p>By Victoria Garza</p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="tab-pane" id="aug6" role="tabpanel" aria-labelledby="aug6-tab">
+                    <p class="schedule-date-detail">Tuesday, August 6</p>
+                    <table class="table table-bordered table-hover align-middle">
+                      <tbody>
+                        <tr>
+                          <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">#MyEscape</p>
+                            <p>By Elke Sasse</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">2.57k</p>
+                            <p>By Amber Borotsik, Tony Olivares</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">Break</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">3orthographies</p>
+                            <p>By Dominik Pagacz</p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="tab-pane" id="aug7" role="tabpanel" aria-labelledby="aug7-tab">
+                    <p class="schedule-date-detail">Wednesday, August 7</p>
+                    <table class="table table-bordered table-hover align-middle">
+                      <tbody>
+                        <tr>
+                          <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Big Love</p>
+                            <p>By Simona Rapello and Max Chicco</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Bomb (Une Bombe)</p>
+                            <p>By Guillaume Harvey</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">Break</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Circus Tale & A Love Song</p>
+                            <p>By Demián Bichir</p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="tab-pane" id="aug8" role="tabpanel" aria-labelledby="aug8-tab">
+                    <p class="schedule-date-detail">Thursday, August 8</p>
+                    <table class="table table-bordered table-hover align-middle">
+                      <tbody>
+                        <tr>
+                          <td class="align-middle"><span class="time">18:00 - 19:45</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Done Deal</p>
+                            <p>By Pierre-Marc Drouin & Simon Lamarre-Ledoux</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">19:45 - 21:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Hard World for Little Things</p>
+                            <p>By Sonja Bertucci</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">21:15 - 22:15</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">Break</p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="align-middle"><span class="time">22:15 - 00:00</span></td>
+                          <td class="align-middle">
+                            <p class="schedule-movie-name">A Loft in Paradise (Un loft au Paradis)</p>
+                            <p>By Alexandre Lança</p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
               </div>
             </div>
             <a name="news" type="hidden" class="section-anchor d-block mb-5"></a>
@@ -299,7 +411,7 @@
                 <p class="text-white">News</p>
               </div>
             </div>
-            <div class="row section-body">
+            <div class="row section-body p-2">
               <div class="col-md-4">
                 <h2>Section News</h2>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -352,7 +464,7 @@
                 <p class="text-white">About Us</p>
               </div>
             </div>
-            <div class="row section-body">
+            <div class="row section-body p-2">
               <div class="col-md-4">
                 <h2>Section About</h2>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
